k8s/frontend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crypto-frontend-deployment
  namespace: crypto-project
  labels:
    app: crypto-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crypto-frontend
  template:
    metadata:
      labels:
        app: crypto-frontend
    spec:
      containers:
      - name: frontend-service
        image: fgrothaus1/crypto-frontend:af1b3f1af046e07221b6f74668829756465ac16a
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: web-port
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
