k8s/frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: crypto-frontend-service
  namespace: crypto-project
spec:
  selector:
    app: crypto-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: web-port
  type: ClusterIP
