k8s/frontend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crypto-pipeline-ingress
  namespace: crypto-project
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: crypto.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: crypto-frontend-service
            port:
              number: 80
  - host: api.crypto.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: crypto-api-service
            port:
              number: 8000
